welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.error
occurrences:4: error: not found: value lonkingFor
    if(nums(i) == lonkingFor){occu=occu+1}
                  ^