welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.code
def occurrences(nums:Array[Int],lookingFor:Int):Int = {
  var occu:Int = 0
  for(i<- 0 to nums.length-1){
    if(nums(i) == lonkingFor){occu=occu+1}
  }
  return(occu)
}
  